Fix horizontal scroll bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,20 +70,30 @@ h1 {
 }
 
 // bug menu
-.horizontalScroll {
-    display: flex;
-    flex-direction: row;
-    max-width: 100vw;
-    overflow-x: scroll;
-    .bug {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+.horizontalScrollParent {
+    overflow: hidden;
+    margin-bottom: 10%;
 
-        img {
-            max-height: 50%;
+    .horizontalScroll {
+        overflow-x: hidden;
+        overflow-y: scroll;
+        margin-bottom: -50px;
+        padding-bottom: 50px;
+        display: flex;
+        flex-direction: row;
+        max-width: 100vw;
+        overflow-x: scroll;
+        .bug {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-height: 1000px;
+            img {
+                height: 500px;
+            }
         }
     }
+    
 }
 
 // video
